--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,10 @@
 </head>
 <body>
 
+    <div id="splash-screen">
+        <h1>Radio World</h1>
+    </div>
+
     <div class="github-link-container">
         <a href="https://www.github.com/harsh-sreehari" target="_blank" rel="noopener noreferrer" title="View on GitHub">
             <svg class="github-logo" viewBox="0 0 16 16" version="1.1" aria-hidden="true">
@@ -30,7 +34,13 @@
     <div id="station-panel">
         <div id="panel-header">
             <h3 id="panel-title">No station selected</h3>
-            <audio id="audio-player" controls></audio>
+            <div class="player-controls">
+                <audio id="audio-player" controls></audio>
+                <input type="range" id="volume-slider" min="0" max="100" value="100" title="Volume">
+            </div>
+        </div>
+        <div id="station-metadata">
+            <!-- Language and tags will be populated here -->
         </div>
         <div id="station-list">
             <!-- Nearby stations will be populated here by JavaScript -->
